[cs-ui] CSTab - fixed text being cut off because of line-height

--- a/cs-ui-components/src/sass/components/_cs-tab.scss
+++ b/cs-ui-components/src/sass/components/_cs-tab.scss
@@ -35,7 +35,6 @@
 			@include sc(--cs-tab-c);
 
 			.cs-tab-name {
-				line-height: 1;
 				font-size: 0.8125rem;
 				@include overflow-ellipsis;
 
